fix for missing spacing between icon and number in header notifications

--- a/src/app/components/header/_nav.scss
+++ b/src/app/components/header/_nav.scss
@@ -38,6 +38,12 @@
   }
 }
 
+.nav-item__notifications {
+  .icon-holder {
+    margin-right: $base-unit/2;
+  }
+}
+
 .nav__link {
   display: block;
   line-height: 1;
